--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="TestNG_sel/seleniumTesting.java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre-10.0.1">
 		<attributes>
 			<attribute name="module" value="true"/>
@@ -17,8 +18,5 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/selenium3_jars/selenium-server-standalone-3.12.0.jar"/>
-	<classpathentry kind="lib" path="lib/geckodriver/geckodriver.exe"/>
-	<classpathentry kind="lib" path="lib/iedriverserver/IEDriverServer.exe"/>
-	<classpathentry kind="lib" path="TestNG_sel/seleniumTesting.java"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
